<resources>
    <string name="app_name">Profile</string>
    <string name="company_name">GreenFlag</string>
    <string name="no_matter_what">No Matter What</string>
    <string name="create_account">Create an account</string>
    <string name="car_health_insurance">Car health updates</string>
    <string name="request_a_rescue_online">Request a rescue online</string>
    <string name="policy_info">Policy information</string>
    <string name="email_address">Email address</string>
    <string name="tv_next">Next</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_dob">Choose Birth Date</string>
    <string name="not_specified">Not-Specified</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="postal_address">Postal Address (Opt)</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_instructions">Your password should have a minimum of 8 characters and
    contain at least one number, one uppercase and one lower case letter. You can use special characters.</string>
    <string name="create_account_to_access">GreenFlag customers can create an account to access</string>
    <string name="profile_info">Profile Info</string>
    <string name="gender">Gender</string>
    <string name="select_country">Select Country</string>
    <string name="greetings">Greetings,</string>
</resources>
