<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="40dp">


        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@mipmap/ic_green_flag"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/company_name"
            android:textColor="@color/colorWhite"
            android:textSize="49sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:gravity="bottom"
            android:lineSpacingExtra="12dp"
            android:text="@string/no_matter_what"
            android:textColor="@color/colorLightGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@string/create_account_to_access"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="18dp"
                android:drawableStart="@mipmap/ic_check"
                android:drawablePadding="16dp"
                android:fontFamily="@font/roboto_mono_light"
                android:gravity="bottom"
                android:text="@string/car_health_insurance"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:drawableStart="@mipmap/ic_check"
                android:drawablePadding="16dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/request_a_rescue_online"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:drawableStart="@mipmap/ic_check"
                android:drawablePadding="16dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/policy_info"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <Button

        android:id="@+id/btn_create_account_intro_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="28dp"
        android:background="@drawable/btn_green_gradient"
        android:fontFamily="@font/roboto_mono"
        android:padding="16dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

</LinearLayout>
