<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreen" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:padding="16dp"
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey" />

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorWhite"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:padding="16dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorWhite"
                        android:hint="@string/password"
                        android:inputType="textWebPassword"
                        android:padding="16dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey" />

                    <Button
                        android:id="@+id/btn_change_pic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_green_gradient"
                        android:text="@string/change_photo"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />


                    <EditText
                        android:id="@+id/et_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorWhite"
                        android:hint="@string/age"
                        android:inputType="none"
                        android:padding="16dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey" />

                    <Button
                        android:id="@+id/btn_dob_picker"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorWhite"
                        android:text="@string/choose_dob"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/select_country"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_country_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorWhite"
                        android:text="@string/not_specified"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/gender"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/rb_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorWhite"
                            android:text="@string/female"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorWhite"
                            android:text="@string/male"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rb_not_specified"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorWhite"
                            android:text="@string/not_specified"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                    </RadioGroup>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">


                <EditText
                    android:id="@+id/et_postal_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:hint="@string/postal_address"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_green_gradient"
                    android:padding="18dp"
                    android:text="@string/save"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
